# ros2_robotic_arm

./: .gitignore  CLAUDE.md  Dockerfile  MEMORY.md  README.md  build_and_run_container.sh  build_container.sh  build_packages.sh  docker-compose.yml  entrypoint.sh  open_rviz_simulation.sh  open_simulation.sh  packages_build.sh  pyproject.toml  robotic_arm.sh  run.sh  run_container.sh  run_container_gui.sh  start_simulation.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
doc/: CHANGELOG.md  MEMORY.md  architecture.md  camera_vision.md  dev_workflow.md  ros_flowchart.md  switch_to_6_dof.md
src/robotic_arm_bringup/: package.xml  setup.cfg  setup.py
src/robotic_arm_bringup/config/: arm_config.yaml  objects.yaml
src/robotic_arm_bringup/launch/: arm_system.launch.py
src/robotic_arm_bringup/robotic_arm_bringup/: arm_cli.py  arm_controller.py  motion_server.py  move_to_cube.py  scene_manager.py
src/robotic_arm_controller/: package.xml  setup.cfg  setup.py
src/robotic_arm_controller/launch/: arm_controller.launch.py
src/robotic_arm_controller/robotic_arm_controller/: arm_mover.py
src/robotic_arm_description/: CMakeLists.txt  package.xml
src/robotic_arm_description/config/: arm_controllers.yaml  mk5.yaml
src/robotic_arm_description/launch/: display.launch.py  view_arm.launch.py
src/robotic_arm_description/rviz/: view_arm.rviz
src/robotic_arm_description/urdf/: ar.urdf.xacro  ar_gripper_macro.xacro  ar_macro.xacro  fake_ar.urdf.xacro  robotic_arm.urdf.xacro
src/robotic_arm_interfaces/: CMakeLists.txt  package.xml
src/robotic_arm_interfaces/action/: CloseGripper.action  MoveTo.action  Pick.action  Place.action
src/robotic_arm_interfaces/msg/: DetectedObject.msg  DetectedObjects.msg  ObjectInfo.msg
src/robotic_arm_interfaces/srv/: ListObjects.srv  MoveObject.srv
src/robotic_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robotic_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  robotic_arm.ros2_control.xacro  robotic_arm.srdf  robotic_arm.urdf.xacro  ros2_controllers.yaml
src/robotic_arm_perception/: package.xml  setup.cfg  setup.py
src/robotic_arm_perception/robotic_arm_perception/: camera_node.py  vision_node.py
tests/: conftest.py  test_arm.py
(+9 files in other folders)
